--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -51,6 +51,15 @@ import logoUrl from '@assets/logoipsum.svg?url';
                 <a href="/">home</a>
             </li>
             <li>
+                <a href="/portfolio">portfolio</a>
+            </li>
+            <li>
+                <a href="/services">services</a>
+            </li>
+            <li>
+                <a href="/process">process</a>
+            </li>
+            <li>
                 <a href="/about">about</a>
             </li>
             <li>
