--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,44 +6,18 @@ import HeroHeading from '@components/headings/HeroHeading.astro';
 
 <Layout title="Home">
     <section id="hero-section" class="hero-section section wrapper">
-        <HeroHeading title="Hero Title" />
-        <p>
-            Lorem ipsum odor amet, consectetuer adipiscing elit. Potenti velit
-            nascetur vehicula mi eros bibendum magnis vivamus ullamcorper.
-            Vulputate mauris turpis facilisi; auctor mollis magnis luctus
-            tincidunt magnis. Aliquet habitant non augue; placerat senectus
-            dictumst luctus. Venenatis cursus fames phasellus consequat torquent
-            justo velit. Venenatis lectus proin aliquam viverra dictumst
-            nascetur. Himenaeos quisque vitae nunc felis hendrerit maecenas.
-            Montes ipsum arcu arcu maecenas turpis aptent tristique mi curae.
-            Tristique amet euismod volutpat nam pharetra risus rhoncus posuere.
-        </p>
+        <HeroHeading title="Rockwood Design" />
     </section>
 
-    <section class="section wrapper cards">
-        <PrimaryCard>
-            <img src="https://picsum.photos/350/250" alt="test" />
-            <div class="card-content">
-                <h3>card</h3>
-                <p>paragraph</p>
-            </div>
-        </PrimaryCard>
-
-        <PrimaryCard>
-            <img src="https://picsum.photos/350/250" alt="test" />
-            <div class="card-content">
-                <h3>card</h3>
-                <p>paragraph</p>
-            </div>
-        </PrimaryCard>
-
-        <PrimaryCard>
-            <img src="https://picsum.photos/350/250" alt="test" />
-            <div class="card-content">
-                <h3>card</h3>
-                <p>paragraph</p>
-            </div>
-        </PrimaryCard>
+    <section class="section wrapper">
+        <h2>Trusted for over 35 years</h2>
+        <p>
+            We take pride in crafting precise, builder-friendly plans while
+            expertly navigating complex zoning and conservation regulations.
+            With our deep industry expertise, cutting-edge technology, and an
+            extensive design library for inspiration, we ensure a seamless,
+            efficient, and enjoyable experience from concept to completion.
+        </p>
     </section>
 </Layout>
 
