--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,6 +4,7 @@ export const prerender = false;
 import Layout from '@layouts/Layout.astro';
 import ContactForm from '@components/ContactForm.astro';
 import PrimaryCard from '@components/cards/PrimaryCard.astro';
+import PageHero from '@components/PageHero.astro';
 
 let formSubmitted: boolean = false;
 let resultMessage;
@@ -34,6 +35,17 @@ if (Astro.request.method === 'POST') {
 ---
 
 <Layout title="Contact">
+    <PageHero
+        imageUrl="https://picsum.photos/1920/1080?random=2"
+        title="Contact Us"
+    >
+        <p>
+            We have worked on thousands of projects from small remodels to full
+            scale designs. We'd love to hear more about your project and set up
+            a consultation.
+        </p>
+    </PageHero>
+
     <section class="section wrapper">
         <div class="text">
             <h1>Contact Us</h1>
