--- a/src/pages/process.astro
+++ b/src/pages/process.astro
@@ -1,8 +1,21 @@
 ---
 import Layout from '@layouts/Layout.astro';
+import PageHero from '@components/PageHero.astro';
 ---
 
 <Layout title="Process">
+    <PageHero
+        imageUrl="https://picsum.photos/1920/1080?random=2"
+        title="Our Process"
+    >
+        <p>
+            Exceptional design begins with a clear vision. One of the most
+            rewarding aspects of our process is collaborating with clients to
+            understand their unique aspirations. We see you as the visionary,
+            while we bring our years of expertise to guide you through the
+            benefits and challenges of various design possibilities.
+        </p>
+    </PageHero>
     <section class="section wrapper">
         <h1>process</h1>
     </section>
