--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -1,8 +1,22 @@
 ---
 import Layout from '@layouts/Layout.astro';
+import PageHero from '@components/PageHero.astro';
 ---
 
 <Layout title="Services">
+    <PageHero
+        imageUrl="https://picsum.photos/1920/1080?random=2"
+        title="Planning and Services"
+    >
+        <p>
+            At Rockwood Design, we provide comprehensive planning and
+            architectural services tailored to each project's unique needs. From
+            initial site analysis and zoning evaluations to budget planning and
+            design execution, we guide clients through every stage of the
+            process.
+        </p>
+    </PageHero>
+
     <section class="section wrapper">
         <h1>services</h1>
     </section>
