--- a/src/styles/theme/primitives.css
+++ b/src/styles/theme/primitives.css
@@ -89,6 +89,8 @@
         0 8px 10px -6px rgb(102 45 145 / 0.25);
     --shadow-dark-2xl: 0 25px 50px -12px rgb(102 45 145 / 0.75);
 
+    --opaque: rgb(0 0 0 / 0.8);
+
     /*
      * COLOR
      * */
