--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,6 +10,9 @@ import '../styles/global.css';
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
 
+// import swiper library css
+import 'swiper/css';
+
 interface Props {
     title: string;
 }
