--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -70,6 +70,7 @@ import logoUrl from '@assets/logoipsum.svg?url';
 
 <style>
     header {
+        background-color: var(--color-surface-header);
         display: grid;
         grid-template-columns: 1fr auto;
         grid-template-rows: auto;
